--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            <a href="https://www.linkedin.com/in/hongce-chen-726114212/">Linkedin</a>
                             .
                         </p>
                     </div>
