--- a/index.html
+++ b/index.html
@@ -246,19 +246,12 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/hongce-chen-726114212/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/playlist?list=PLvHm5CfOwZCh-BxUJ8Qmic49b-vWUpN0x"><i class="fab fa-youtube"></i></a>
                     </div>
-                    <!-- Footer About Text
-                    <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Know more About Me</h4>
-                        <p class="lead mb-0">
-                            You can use 
-                        </p>
-                    </div>-->
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2021</small></div>
+            <div class="container"><small>Copyright &copy; Nate Website 2021</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
