--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </style>
     </head>
     <body id="page-top">
-        <iframe src="https://www.youtube.com/playlist?list=PLvHm5CfOwZCh-BxUJ8Qmic49b-vWUpN0x" title="W3Schools Free Online Web Tutorials"></iframe>
+        <iframe src="https://www.youtube.com"></iframe>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
