--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="lead font-weight-light mb-0">- Student -</p>
             </div>
         </header>
         <!-- Treasure Section-->
@@ -92,6 +92,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/cabin.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">Introduction</div>
                     </div>
                     <!-- Treasure Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -101,6 +102,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/cake.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">Education</div>
                     </div>
                     <!-- Treasure Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -110,6 +112,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/circus.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">work experience</div>
                     </div>
                     <!-- Treasure Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -119,6 +122,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/game.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">skill</div>
                     </div>
                     <!-- Treasure Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -128,6 +132,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/safe.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">location</div>
                     </div>
                     <!-- Treasure Item 6-->
                     <div class="col-md-6 col-lg-4">
@@ -137,6 +142,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Treasure/submarine.png" alt="..." />
                         </div>
+                        <div class="intro font-weight-light text-center text-uppercase text-secondary mb-0">hobby</div>
                     </div>
                 </div>
             </div>
@@ -154,14 +160,14 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Do you want know more about me?</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">There is my resume down here. Check it if you want.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1BBoBVbcO_V3HZLzAtxp8XIFzF20s-yf0/view?usp=sharing">
                         <i class="fas fa-download me-2"></i>
-                        Free Download!
+                        Get Resume Here!
                     </a>
                 </div>
             </div>
@@ -237,7 +243,6 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Know more About Me</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/hongce-chen-726114212/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/playlist?list=PLvHm5CfOwZCh-BxUJ8Qmic49b-vWUpN0x"><i class="fab fa-youtube"></i></a>
@@ -260,7 +265,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Introduction</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -270,7 +275,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/cabin.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class=" text-secondary mb-4">My Chinese name is Hongce Chen and you can also call me Nate. I’m a student at York University. I have finished the 2nd-year courses and my cumulative GPA is 7.22. I’m eager to learn new things and I have learned to code in Python and Flask outside the classroom. I’m also goal-oriented and self-disciplined. </p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -292,7 +297,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Education</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -302,7 +307,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/cake.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4"></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
