--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/19BcTHxnXP3dWmrvfnpAFNOewKASWzAPi/view?usp=sharing">
+                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1BBoBVbcO_V3HZLzAtxp8XIFzF20s-yf0/view?usp=sharing">
                         <i class="fas fa-download me-2"></i>
                         Get Resume Here!
                     </a>
@@ -307,7 +307,11 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/cake.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4"></p>
+                                    <p class=" text-secondary mb-4">Institution: York University<br>
+                                    Degree: Bachelor<br>
+                                    Major: Computer Science<br>
+                                    Current Progress: third-year<br>
+                                    Current GPA: 7.22</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -329,7 +333,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">work experience</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -339,7 +343,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/circus.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class=" text-secondary mb-4">I do not have job before and looking for the first interen work now :))</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -361,7 +365,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">skill</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -371,7 +375,11 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/game.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class=" text-secondary mb-4">•	Knowledge of Java, C, Python, UNIX shell scripts, JavaScript, HTML, CSS, Flask, MySQL and had experience developing simple Android apps with Java.<br>
+                                        •	Familiarity with Linux operating systems<br>
+                                        •	Familiarity with data structures and algorithm.<br>
+                                        •	Demonstrates excellent teamwork, with strong communication skills.
+                                        </p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -393,7 +401,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Location</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -403,7 +411,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/safe.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class=" text-secondary mb-4">Live in Toronto Ontario Canada currently. It based on work place.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -425,7 +433,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Treasure Modal - Title-->
-                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                                    <h2 class="Treasure-modal-title text-secondary text-uppercase mb-0">Hobby</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -435,7 +443,8 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/submarine.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class=" text-secondary mb-4">I love learn the new thing about Tech because i am interest in it. Currently, i am learning python, flask and MySQL.<br>
+                                        Afterthat i also do sport like running and basketball or play game like league and FPS game.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
