--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Know more About Me</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/natechch1"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/hongce-chen-726114212/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/playlist?list=PLvHm5CfOwZCh-BxUJ8Qmic49b-vWUpN0x"><i class="fab fa-youtube"></i></a>
                     </div>
