--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/cabin.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class=" text-secondary mb-4">My Chinese name is Hongce Chen and you can also call me Nate. I’m a student at York University. I have finished the 2nd-year courses and my cumulative GPA is 7.22. I’m eager to learn new things and I have learned to code in Python and Flask outside the classroom. I’m also goal-oriented and self-disciplined. </p>
+                                    <p class=" text-secondary mb-4">My Chinese name is Hongce Chen and you can also call me Nate. I’m a student at York University. I'm 4th year student and my cumulative GPA is 7.22. I’m eager to learn new things and I have learned to code in Python and Flask outside the classroom. I’m also goal-oriented and self-disciplined. </p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
