update info for 4th year

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/cabin.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class=" text-secondary mb-4">My Chinese name is Hongce Chen and you can also call me Nate. I’m a student at York University. I'm 4th year student and my cumulative GPA is 7.22. I’m eager to learn new things and I have learned to code in Python and Flask outside the classroom. I’m also goal-oriented and self-disciplined. </p>
+                                    <p class=" text-secondary mb-4">My Chinese name is Hongce Chen and you can also call me Nate. I’m a student at York University. I'm 4th year student and my cumulative GPA is 6.97. I’m eager to learn new things and I have learned to code in Spring (and other framework), Python and Flask outside the classroom. I'm interest in ML/DL and did some DL replication test. I’m also goal-oriented and self-disciplined. </p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -310,8 +310,8 @@
                                     <p class=" text-secondary mb-4">Institution: York University<br>
                                     Degree: Bachelor<br>
                                     Major: Computer Science<br>
-                                    Current Progress: third-year<br>
-                                    Current GPA: 7.22</p>
+                                    Current Progress: Fourth-year<br>
+                                    Current GPA: 6.97</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -376,6 +376,8 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/game.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
                                     <p class=" text-secondary mb-4">•	Knowledge of Java, C, Python, UNIX shell scripts, JavaScript, HTML, CSS, Flask, MySQL and had experience developing simple Android apps with Java.<br>
+                                        •	Familiarity with SE Framwork like Spring, Springboot, MyBatis, Mysql.<br>
+                                        •	Familiarity with ML/DL models and tools<br>
                                         •	Familiarity with Linux operating systems<br>
                                         •	Familiarity with data structures and algorithm.<br>
                                         •	Demonstrates excellent teamwork, with strong communication skills.
