update work experience and location

--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/circus.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class=" text-secondary mb-4">I do not have job before and looking for the first interen work now :))</p>
+                                    <p class=" text-secondary mb-4">The first project in my resume is about AI development. In the last term, I did this project with Professor Song Wang. My task is to test the repeatability and reliability of ML/DL models for SE tasks (e.g., automatic comment generation). Testing replications of code provided by other researchers interested me in ML and DL. I uploaded my project report.
+I'm currently coding web software which is about user center. This project is the second project on my resume. It's a self-project. For the frontend part, I used React and Ant Design Pro. I used SpringMVC, SpringBoot, MyBatis Plus, and MySQL for the backend.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -379,6 +380,7 @@
                                         •	Familiarity with SE Framwork like Spring, Springboot, MyBatis, Mysql.<br>
                                         •	Familiarity with ML/DL models and tools<br>
                                         •	Familiarity with Linux operating systems<br>
+                                        •	Familiarity with Acitve Directory, Windows server and TCP/IP.<br> 
                                         •	Familiarity with data structures and algorithm.<br>
                                         •	Demonstrates excellent teamwork, with strong communication skills.
                                         </p>
@@ -413,7 +415,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/safe.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class=" text-secondary mb-4">Live in Toronto Ontario Canada currently. It based on work place.</p>
+                                    <p class=" text-secondary mb-4">- Currently in Toronto, Ontario, Canada.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -445,8 +447,7 @@
                                     <!-- Treasure Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/Treasure/submarine.png" alt="..." />
                                     <!-- Treasure Modal - Text-->
-                                    <p class=" text-secondary mb-4">I love learn the new thing about Tech because i am interest in it. Currently, i am learning python, flask and MySQL.<br>
-                                        Afterthat i also do sport like running and basketball or play game like league and FPS game.</p>
+                                    <p class=" text-secondary mb-4">I have always been very interested in tech and really love learning to code on my own time. I have spend a lot of my time working on personal projects like this site for example. When I am not working on my projects, I like to go running, play basketball, and play some computer games.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
